# MyLittleGAN

./: DCGAN.ipynb  README.md  pyproject.toml  requirements.txt
gan/: datasets.py  generator.py  networks.py  training.py  utils.py
tests/: test_datasets.py  test_generator.py  test_networks.py
