[tool.poetry]
name = "gan"
version = "0.0.1"
description = "A simple DCGAN. "
authors = ["rallesiardo <robin.allesiardo@gmail.com>"]
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/rallesiardo/MyLittleGan"
homepage = "https://github.com/rallesiardo/MyLittleGan"


[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
torch = "^1.4.0"
pandas = "^0.25.3"
scikit-learn = "^0.23.1"
torchvision = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
